[package]
name = "yamabiko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { git = "https://github.com/Zeerooth/git2-rs.git", branch = "index_find_prefix" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.3"
rand = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
parking_lot = "0.12"
serde_yaml = { version = "0.9", optional = true }

[features]
full = ["dep:serde_yaml"]
yaml = ["dep:serde_yaml"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "perf"
harness = false

[profile.bench]
debug = true

