[package]
name = "yamabiko"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { git = "https://github.com/Zeerooth/git2-rs.git", branch = "index_find_prefix" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.3"
rand = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros"] }
parking_lot = "0.12"
serde_yaml = { version = "0.9", optional = true }
log = { version = "0.4", optional = true }

[features]
full = ["log", "serde_yaml"]
yaml = ["serde_yaml"]

[dev-dependencies]
criterion = "0.4"
simple_logger = "4.0"

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "queries"
harness = false

[profile.bench]
debug = true

