[workspace]
default-members = ["ymbk", "yamabiko"]
members = ["ymbk", "yamabiko"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["zeerooth@tearoom.earth"]
license = "GPL-3.0-or-later"
edition = "2021"

[workspace.dependencies]
git2 = "0.19.0"
yamabiko = { path = "./yamabiko" }
ymbk = { path = "./ymbk" }

[profile.bench]
debug = true

[workspace.lints.clippy]

[workspace.lints.rust]
