[package]
name = "yamabiko"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
git2 = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tempfile = "3.13"
rand = "0.8"
serde_yml = { version = "0.0.12", optional = true }
log = { version = "0.4", optional = true }
thiserror = "2.0.3"

[features]
full = ["log", "serde_yml"]
yaml = ["serde_yml"]

[dev-dependencies]
criterion = "0.5.1"
simple_logger = "5.0.0"
tokio = { version = "1.41", features = ["full"] }
rstest = "0.23"

[[bench]]
name = "perf"
harness = false

[[bench]]
name = "queries"
harness = false

[[bench]]
name = "squash"
harness = false

[[bench]]
name = "squash_extreme"
harness = false

[lints]
workspace = true
